2008-04-30  Ariya Hidayat  <ariya.hidayat@trolltech.com>

        Reviewed by Simon.
        
        Build the Qt port with SVG Foreign Object support.

        * WebCore.pro:

2008-04-30  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Holger.

        Fix null pointer deference triggered by
        LayoutTests/fast/loader/cancel-load-during-port-block-timer.html

        * platform/network/qt/ResourceHandleQt.cpp:
        (WebCore::ResourceHandle::cancel): Check m_job before dereferencing.

2008-04-29  David Hyatt  <hyatt@apple.com>

        Improve the performance of masks by adding code to set more precise clips on the transparency layers
        used to paint the content under the mask, and then also avoid creating transparency layers for the masks
        themselves in common cases.

        Reviewed by Dan Bernstein

        * platform/graphics/GraphicsContext.cpp:
        (WebCore::GraphicsContext::drawTiledImage):
        Fix a bug in drawTiledImage where the composite mode got lost in the double stretch case for nine piece
        images.

        * rendering/InlineFlowBox.cpp:
        (WebCore::InlineFlowBox::paintFillLayers):
        (WebCore::InlineFlowBox::paintFillLayer):
        (WebCore::InlineFlowBox::paintMask):
        Optimize to only push a transparency layer for the mask if multiple images are combining.  Add a new
        composite operator argument for use when painting fill layers to do direct destination-in compositing while
        painting images.


        * rendering/InlineFlowBox.h:
        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::paintMask):
        (WebCore::RenderBox::paintMaskImages):
        Optimize to only push a transparency layer for the mask if multiple images are combining.

        (WebCore::RenderBox::maskClipRect):
        A new method that attempts to compute a precise clip rect for the mask images.

        (WebCore::RenderBox::paintFillLayers):
        (WebCore::RenderBox::paintFillLayer):